refactor: getWidgets + update docs
